<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/cancel_buttonSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/handler"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/btnMr"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/border_back_grey_stock"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/ic_mr"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/mrText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:fontFamily="@font/dm_sans_bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/male"
            android:textColor="@color/text_black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnMrs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/border_back_grey_stock"
        android:orientation="horizontal">

        <ImageView

            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:contentDescription="@string/todo"             android:src="@drawable/ic_mrs"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/mrsText"
            android:fontFamily="@font/dm_sans_bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:paddingStart="10dp"
            android:text="@string/female"
            android:textColor="@color/text_black" />


    </LinearLayout>



</LinearLayout>