<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_16sdp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cancel_buttonSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/handler" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Select Filter Type"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <LinearLayout
        android:id="@+id/nameOrEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Name or Email">

        <ImageView
            android:id="@+id/allTimeImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/email"
            app:tint="@color/blue" />

        <TextView
            android:id="@+id/allTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:fontFamily="@font/dm_sans_medium"
            android:includeFontPadding="false"
            android:text="@string/name_or_email"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/text_black"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bloodGroupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Blood Group">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/blood"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:fontFamily="@font/dm_sans_medium"
            android:includeFontPadding="false"
            android:text="@string/blood_group"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/text_black"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/districtBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="District">

        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/pin"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:text="@string/district"
            android:textColor="@color/text_black"
            android:fontFamily="@font/dm_sans_medium"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/occupationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Occupation">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/briefcase"
            app:tint="@color/blue" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:text="@string/occupation"
            android:fontFamily="@font/dm_sans_medium"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/text_black"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/departmentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Department">

        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/department"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:text="@string/department"
            android:textColor="@color/text_black"
            android:fontFamily="@font/dm_sans_medium"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/hallBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Hall">

        <ImageView

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/hall"
            app:tint="@color/blue" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:text="@string/hall"
            android:textColor="@color/text_black"
            android:fontFamily="@font/dm_sans_medium"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/dobBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/stroke_boarder"
        android:orientation="horizontal"
        android:tag="Date of Birth">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            android:src="@drawable/birthday"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="0dp"
            android:includeFontPadding="false"
            android:text="@string/date_of_birth"
            android:textColor="@color/text_black"
            android:fontFamily="@font/dm_sans_medium"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


</LinearLayout>