<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grey_50"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:padding="@dimen/_1sdp"
        style="@style/emailPassText"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@drawable/rectangle_8"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            app:hintEnabled="false"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            android:padding="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/_9sdp"
                android:textSize="@dimen/_13sdp"
                android:hint="*******"
                android:background="@drawable/rectangle_8"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/strength_level_txt"
            android:layout_weight="1"
            android:layout_width="0dp"
            tools:text="Weak"
            android:gravity="center"
            android:textSize="@dimen/_10ssp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:id="@+id/strength_level_indicator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toEndOf="@+id/strength_level_txt"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />



    <LinearLayout
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/_10sdp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/lowerCase_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/darkGray"
        app:srcCompat="@drawable/ic_checkmark" />

    <TextView
        android:id="@+id/lowerCase_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_3sdp"
        android:text="@string/lowercase_letters"
        android:textColor="@color/darkGray"/>
</LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/upperCase_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/darkGray"
            app:srcCompat="@drawable/ic_checkmark" />

        <TextView
            android:id="@+id/upperCase_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/uppercase_letters"
            android:textColor="@color/darkGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/number_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/darkGray"
            app:srcCompat="@drawable/ic_checkmark" />

        <TextView
            android:id="@+id/number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/digits"
            android:textColor="@color/darkGray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/minimum_characters_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/darkGray"
            app:srcCompat="@drawable/ic_checkmark" />

        <TextView
            android:id="@+id/minimum_characters_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:text="@string/minimum_characters"
            android:textColor="@color/darkGray"/>
    </LinearLayout>

</LinearLayout>

